
2. Linux Only: FIREBIRD environment variable is now checked when loading the client library.
    If a client library path is not explicitly provided and the FIREBIRD environment
    variable is set then the directory given by this variable and any 'lib' subdirectory
    are searched for the Firebird client library. Only if none is found, is the default
    client library used.

FBINTF Change Log  version          (1.1-5 Build 12044) Fri, 17 Apr 2020 12:30:01 +0100

1. ISQLParams.GetHasCaseSensitiveParams added. Returns true if param names are
   case sensitive

2. Single line SQL comments starting with '--' are now recognised by SQL Parser.

3. New API Calls:
	IColumnMetaData.GetStatement
	IColumnMetaData.GetTransaction
	ISQLData.GetStrLength
	IResults.GetStatement
	IAttachment.OpenBlob (using Blob metadata)
	IAttachment.OpenArray (using array metadata)

4. FBMessages: removal of unused messages

5. TFBArray.Create (2nd case): ensure that FFirebirdClientAPI is correctly set.

6. TIBSQLStatementType: SQLSavePoint added to end of enumeration.

FBINTF Change Log  version          (1.1-4 Build 11515)  Fri, 28 Dec 2018 10:04:19 +0000

1. Fix a problem with the SQL parameter parser that failed to recognise parameters
   where the second character of the parameter name is a numeric.

2. New method for IAttachment: procedure getFBVersion(version: TStrings);
   This returns the isc_version connection information as one or more lines.
   This is the same information as returned by isql with the -z option.

3. If -dFIREBIRD3APIONLY is used as a compiler option then the legacy Firebird API
   is no longer compiled in. Likewise, if -dLEGACYFIREBIRDAPIONLY is used as a
   compiler option then the Firebird 3 API is no longer compiled in.

4. IColumnMetaData: new method.

   TIBDateTimeFormats = (dfTimestamp, {SQL TIMESTAMP}
                        dfDateTime,   {SQL DATETIME}
                        dfTime);
