@@ -90,6 +90,11 @@ FIREBIRD_CLIENT = 'fbclient.dll'; {do not localize}
 FIREBIRD_EMBEDDED = 'fbembed.dll';
 {$ENDIF}
 
+const
+  IBLocalBufferLength = 512;
+  IBBigLocalBufferLength = IBLocalBufferLength * 2;
+  IBHugeLocalBufferLength = IBBigLocalBufferLength * 20;
+
 type
   TStatusVector              = array[0..19] of NativeInt;
   PStatusVector              = ^TStatusVector;
@@ -160,7 +165,6 @@ type
     {Taken from legacy API}
     isc_sqlcode: Tisc_sqlcode;
     isc_sql_interprete: Tisc_sql_interprete;
-    isc_interprete: Tisc_interprete;
     isc_event_counts: Tisc_event_counts;
     isc_event_block: Tisc_event_block;
     isc_free: Tisc_free;
@@ -183,7 +187,7 @@ type
     function SQLDecodeTime(bufptr: PByte): TDateTime;  virtual; abstract;
     procedure SQLEncodeDateTime(aDateTime: TDateTime; bufptr: PByte); virtual; abstract;
     function SQLDecodeDateTime(bufptr: PByte): TDateTime; virtual; abstract;
-
+    function FormatStatus(Status: TFBStatus): AnsiString; virtual; abstract;
 
     {IFirebirdAPI}
     function GetStatus: IStatus; virtual; abstract;
@@ -207,11 +211,6 @@ WinDirs,
  ShlObj,
 {$ENDIF}
 SysUtils;
-
-const
-  IBLocalBufferLength = 512;
-  IBBigLocalBufferLength = IBLocalBufferLength * 2;
-  IBHugeLocalBufferLength = IBBigLocalBufferLength * 20;
 
 {$IFDEF UNIX}
 {$I 'include/uloadlibrary.inc'}
@@ -385,7 +384,6 @@ function TFBClientAPI.LoadInterface: boolean;
 begin
   isc_sqlcode := GetProcAddr('isc_sqlcode'); {do not localize}
   isc_sql_interprete := GetProcAddr('isc_sql_interprete'); {do not localize}
-  isc_interprete := GetProcAddr('isc_interprete'); {do not localize}
   isc_event_counts := GetProcAddr('isc_event_counts'); {do not localize}
   isc_event_block := GetProcAddr('isc_event_block'); {do not localize}
   isc_free := GetProcAddr('isc_free'); {do not localize}
@@ -416,7 +414,6 @@ function TFBStatus.GetMessage: AnsiString;
 var local_buffer: array[0..IBHugeLocalBufferLength - 1] of AnsiChar;
     IBDataBaseErrorMessages: TIBDataBaseErrorMessages;
     sqlcode: Long;
-    psb: PStatusVector;
 begin
   Result := '';
   IBDataBaseErrorMessages := FIBDataBaseErrorMessages;
@@ -428,7 +425,7 @@ begin
   if (ShowSQLMessage in IBDataBaseErrorMessages) then
   begin
     with FOwner do
-      isc_sql_interprete(sqlcode, local_buffer, IBLocalBufferLength);
+      isc_sql_interprete(sqlcode, local_buffer, sizeof(local_buffer));
     if (ShowSQLCode in FIBDataBaseErrorMessages) then
       Result := Result + CRLF;
     Result := Result + strpas(local_buffer);
@@ -438,15 +435,8 @@ begin
   begin
     if (ShowSQLCode in IBDataBaseErrorMessages) or
        (ShowSQLMessage in IBDataBaseErrorMessages) then
-      Result := Result + CRLF;
-    psb := StatusVector;
-    with FOwner do
-    while (isc_interprete(@local_buffer, @psb) > 0) do
-    begin
-      if (Result <> '') and (Result[Length(Result)] <> LF) then
-        Result := Result + CRLF;
-      Result := Result + strpas(local_buffer);
-    end;
+      Result := Result + LineEnding;
+    Result := Result + LineEnding + FOwner.FormatStatus(self);
   end;
   if (Result <> '') and (Result[Length(Result)] = '.') then
     Delete(Result, Length(Result), 1);
